#2840: Fix bug where scrollbar eclipses expand arrows

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,3 +158,7 @@ body a {
 #copy-calendar-button {
   margin-left: 10px;
 }
+
+.main-sidebar, .main-sidebar::before {
+  width: 280px;
+}
